added accessibility feature: tabindex

--- a/css/styles.css
+++ b/css/styles.css
@@ -150,7 +150,7 @@ nav h1 a {
   border: 2px solid #ccc;
   font-family: Arial,sans-serif;
   margin: 15px;
-  min-height: 380px;
+  min-height: 320px;
   padding: 0 30px 25px;
   text-align: left;
   width: 270px;
@@ -179,7 +179,7 @@ nav h1 a {
   margin: 0;
   font-size: 11pt;
 }
-.normal-link {
+/*.normal-link {
   background-color: orange;
   border-bottom: 3px solid #eee;
   color: #fff;
@@ -190,7 +190,7 @@ nav h1 a {
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
-}
+}*/
 
 /* ====================== Restaurant Details ====================== */
 .inside header {
@@ -323,9 +323,7 @@ nav h1 a {
   #restaurants-list li h1 {
     margin: 10px 0 5px;
   }
-  .normal-link {
-    display: none;
-  }
+  
   /* Restaurant Details - Navigation */
   .inside header {
     position: relative;
